fix: table headers background having gaps

--- a/webui/src/scss/_common.scss
+++ b/webui/src/scss/_common.scss
@@ -28,7 +28,7 @@ h5 {
 }
 
 .table-responsive-sm th {
-	border-radius: 10%;
+	// border-radius: 10%;
 	border-bottom-width: 0px !important;
 	background-color: #f0f0f0;
 	padding-top: 6px;
